# vvsu-zbis-oop

./: CMakeLists.txt  main.cpp  task3.cpp
task3/: FloatArray.cpp  FloatArray.h  task3.cpp  task3.h
task4/: ApartmentHouse.cpp  ApartmentHouse.h  Building.cpp  Building.h  task4.cpp  task4.h
task5/: Device.cpp  Device.h  Laptop.cpp  Laptop.h  TV.cpp  TV.h  task5.cpp  task5.h
task6/: task6.cpp  task6.h  templated_avg.cpp
