cmake_minimum_required(VERSION 3.9)
project(untitled)

set(CMAKE_CXX_STANDARD 11)

add_executable(untitled main.cpp task3/task3.cpp task3/task3.h task3/FloatArray.cpp task3/FloatArray.h task4/Building.cpp task4/Building.h task4/ApartmentHouse.cpp task4/ApartmentHouse.h task4/task4.cpp task4/task4.h)
